# ayatana-indicator-a11y

./: .build.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  NEWS  README.md
data/: 50-org.ayatana.indicator.a11y.AccountsService.pkla  50-org.ayatana.indicator.a11y.AccountsService.rules  CMakeLists.txt  ayatana-indicator-a11y.desktop.in  ayatana-indicator-a11y.service.in  org.ayatana.indicator.a11y  org.ayatana.indicator.a11y.AccountsService.policy  org.ayatana.indicator.a11y.AccountsService.xml  org.ayatana.indicator.a11y.gschema.xml
debian/: ayatana-indicator-a11y.links  changelog  control  copyright  rules
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-a11y.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  (+97 more)
src/: CMakeLists.txt  main.c  service.c  service.h
